css/style.css
/* Normalize CSS */

@import 'normalize.css';

/* Fonts */

@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;600&display=swap');

/* Border Box */

html {
    box-sizing: border-box;
  }
  *, *:before, *:after {
    box-sizing: inherit;
  }

/* Main Styles */

body {
    font-family: 'Oswald', sans-serif;
    display: flex;
    flex-direction: column;
 } 

 /*Header  */

header {
    background-color: #c5b5f2;
    text-align: center;
    font-size: 1.25em;
}

h1 {
    margin: 0;
}

header p {
    margin: .25em 0;
    font-weight: 200;
}

/* Formation Select Box Styles */

.formation-select {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin: 0 0 10px 0;
    padding: 5px 0;
}

.formation-select p {
    flex-basis: 100%;
}

button {
    background-color: #c5b5f2;
    border: 1px solid black;
    border-radius: 10px;
    margin: .25em;
    padding: .75em;
}

button:hover {
    background-color: blueviolet;
}

/* Lineup Box Styles*/

.lineup {
    display: flex;
    flex-direction: column;
    justify-content: stretch;
    margin: 1em;
    border: 1px solid black;
    border-radius: 25px;
}

.lineup>div:nth-child(odd) {
    background-color: rgb(206, 240, 214);
}

.player {
    display: flex;
    align-items:center;
}

.player:first-child {
    border-radius: 25px 25px 0px 0px;
}

.player:last-child {
    border-radius: 0px 0px 25px 25px;
}

.position {
    width: 3em;
    font-weight: 600;
    padding-left: .5em;
    font-size: 1.5em;
}

.hometown {
    font-size: .75em;
    font-weight: 200;
    margin-left: 10px;
    display: none;
}

.photo {
    display: none;
}

/* Name Select Form Styles */
.name {
    font-size: 1.5em;
    border: none;
    background-color: transparent;
}

.name:hover {
    background-color: #c5b5f2;
}

/* Footer */
footer {
    text-align: center;
    font-size: small;
    font-weight: 200;
}

/* Add Hometown to player boxes at 300px */
@media screen and (min-width: 300px) {

    .hometown {
        display: inline-flex;
    }
}

/* Add Images to Player Boxes at 450px */
@media screen and (min-width: 450px) {


    .photo {
        display: flex;
        padding: 5px;
        margin-left: auto;
    }

    .photo img {
        border-radius: 50%;
        width: 15vw;
        height: 15vw;
        object-fit: cover;
        max-width: 150px;
        max-height: 150px;
    }
}

/* Create visual 'on-field formation' at larger screen sizes */
@media screen and (min-width: 1000px) {

    body {
        background: url(../img/lynnfamily.jpeg) no-repeat center/cover;
    }

    .position,
    .hometown {
        padding: 0;
        margin: 0;
    }

    .player {
        flex-direction: column;
        min-width: 20%;
    }

    select {
        text-align: center;
        text-align-last: center;
    }

    .position {
        order: -2;
        width: auto;
    }

    .photo {
        order: -1;
        margin: 0;
    }

    .lineup {
        flex-flow: row wrap-reverse;
        background:  rgb(206, 240, 214);
        width: 75%;
        align-self: center;
        max-width: 1300px;
    }

    #player-1 {
        flex-basis: 100%;
    }

    #player-2,
    #player-3,
    #player-4,
    #player-5,
    #player-6,
    #player-7,
    #player-8,
    #player-9 {
        flex-basis: 25%;
    }

    #player-10,
    #player-11 {
        flex-basis: 50%;
    }

    .lineup>div:nth-child(odd) {
        background-color: transparent;
    }

}

/* Styles for Screenshot Modal using Html2Canvas */

#screenshotContainer {
    display: none;
    position:fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    z-index: 1;
    background-color: rgba(0, 0, 0, 0.8);
}

.close {
    color:white;
    position: absolute;
    top: 10px;
    right: 35px;
    font-size: 35px;
}

#lineupImage {
    position: relative;
    display: grid;
    margin: auto;
    height: 100%;
    max-width: 1000px;
}

canvas {
    max-width: 100%;
    max-height: 100vh;
}

